# Shiksha-setu

./: .env.example  .gitignore  .pre-commit-config.yaml  1-setup.sh  2-start.sh  3-backend.sh  5-stop.sh  AUTH_SETUP.md  CHANGELOG.md  CHANGELOG_UNLOCK.md  DEPLOYMENT.md  DEVELOPMENT.md  DYNAMIC_QUANTIZATION_SUMMARY.md  FINAL_STATUS.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_SETUP.md  MASTER_OPTIMIZER_COMPLETE.md  OMNI_FIXER_REPORT.md  PROJECT_FILES_INVENTORY.md  QUICK_START.md  README.md  REORGANIZATION_REPORT.md  SETUP.sh  SETUP_REQUIREMENTS.md  START.sh  STOP.sh  SYSTEM_STATUS.md  TESTING_GUIDE.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  quickstart.sh  requirements.dev.txt  requirements.lock.txt  requirements.txt  run_migrations.py  run_quality_checks.sh  (+12 more)
.github/: WORKFLOW_FIXES.md  workflow-fixes.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  docker-ci.yml  main.yml  test.yml  tests.yml  type-validation.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_feedback.py  003_add_authentication.py  004_add_user_tracking.py  005_add_composite_indexes.py  007_enable_pgvector.py  008_add_q_a_tables_for_rag_system.py  009_add_ab_testing.py  010_upgrade_embeddings.py  011_token_rotation_teacher_eval.py  012_add_hnsw_indexes.py  013_add_question_generation.py  014_add_translation_review.py  015_add_learning_recommendations.py  016_add_multi_tenancy.py  017_normalize_schema_fix_fk.py  018_add_chat_conversations.py  61631d311ed9_add_q_a_tables_for_rag_system.py
backend/: README.md  database.py  database_v2.py  integration.py  monitoring.py
backend/api/: docs.py  documentation.py  main.py  metrics.py  middleware.py  request_logging.py  sentry_middleware.py  unified_middleware.py  validation_middleware.py  version_middleware.py
backend/cache/: __init__.py  embedding_cache.py  fast_serializer.py  kv_cache.py  multi_tier_cache.py  redis_cache.py  response_cache.py
backend/core/: __init__.py  cache.py  circuit_breaker.py  config.py  config_model_config.py  constants.py  correlation.py  cors_config.py  curriculum_validator.py  database.py  dynamic_quantization.py  exceptions.py  graceful_degradation.py  lifecycle.py  memory_scheduler.py  model_lifecycle.py  model_loader.py  model_optimizer.py  model_serving.py  model_tier_router.py  monitoring.py  offline_manager.py  policy_policy_module.py  rate_limiter.py  request_coalescing.py  scratchspace.py  security.py  storage.py  telemetry.py  threadpool.py  tracing.py  user_rate_limits.py
backend/middleware/: __init__.py  rate_limiter.py  tenant.py
backend/models/: __init__.py  auth.py  chat.py  content.py  progress.py  rag.py  review.py  student.py
backend/monitoring/: __init__.py  metrics.py  oom_alerts.py
backend/pipeline/: README.md  __init__.py  model_clients.py  orchestrator.py
backend/policy/: __init__.py  policy_module.py
backend/schemas/: __init__.py  auth.py  content.py  qa.py  review.py
backend/services/: __init__.py  ab_test_router.py  ab_testing.py  accessibility_service.py  backup_service.py  bhashini.py  cache_manager.py  captions.py  concept_map_service.py  cultural_context.py  cultural_context_service.py  cultural_unified_context.py  curriculum_validation.py  curriculum_validator.py  error_tracking.py  evaluation_refinement_pipeline.py  evaluation_semantic_evaluator.py  grade_adaptation.py  integration.py  model_client.py  model_router.py  ocr.py  pipeline_service.py  prometheus_metrics.py  question_generator.py  rag.py  recommender.py  request_cache.py  review_queue.py  safety_safety_pipeline.py  scorm_exporter.py  simplifier.py  simplify_simplifier.py  speech_generator.py  speech_processor.py  storage.py  streaming.py  student_profile.py  sync_service.py  teacher_evaluation.py  (+4 more)
backend/simplify/: __init__.py  simplifier.py
backend/speech/: generator.py  processor.py
backend/tasks/: __init__.py  audio_tasks.py  celery_app.py  celery_config.py  embedding_tasks.py  ocr_tasks.py  pipeline_tasks.py  qa_tasks.py  rag_tasks.py  simplify_tasks.py  translate_tasks.py
backend/translate/: code_mixer.py  engine.py  model.py
backend/utils/: __init__.py  auth.py  cancellation.py  circuit_breaker.py  device.py  device_manager.py  hashing.py  lazy_loader.py  logging.py  logging_config.py  memory_guard.py  metrics.py  model_loader.py  models.py  request_context.py  sanitizer.py  streaming.py  structured_logging.py  vllm_server.py
backend/validate/: initialize_standards.py  ncert.py
config/: .pre-commit-config.yaml  alembic.ini  pytest.ini  requirements.dev.txt  requirements.txt
database/init.sql/: 01-init.sql  02-schema.sql
deploy/: Dockerfile  docker-compose.monitor.yml  docker-compose.yml  worker.dockerfile
docs/: 01_EXECUTIVE_SUMMARY.md  02_ARCHITECTURE_DIAGRAM.md  03_BACKEND_ARCHITECTURE.md  04_FRONTEND_ARCHITECTURE.md  05_DATA_FLOW.md  06_API_DOCUMENTATION.md  07_MODEL_PIPELINE.md  08_DEPLOYMENT.md  09_CODE_QUALITY.md  10_FUTURE_IMPROVEMENTS.md  11_CONTRIBUTION_SUMMARY.md  CHANGES.md  DATABASE.md  DEPLOYMENT.md  HARDWARE_OPTIMIZATION.md  MASTER_DOCUMENTATION.md  MONITORING.md  README.md  ai_pipeline.md  backend.md  changelog.md  deploy.md  frontend.md  pgvector.md  setup.md  usage.md
docs/archive/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_STATUS.md  (+3 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
infrastructure/: OPTIMIZATION_CHANGELOG.md  README.md
k8s/: .gitignore  README.md  ingress.yaml  kustomization.yaml
policy/: README.txt  audit_manifest.json  config.default.json
reports/: bandit.json
requirements/: dev.txt  requirements.txt
scripts/: README.md  benchmark_api.py  benchmark_hardware.py  benchmark_optimizations.py  create_demo_user.py  manage_migrations.py  run_tests.sh  setup_ai_stack.sh  validate_optimizer.sh  validate_setup.py
src/: database.py
tests/: README.md  conftest.py  test_backend_complete.py  test_production_improvements.py
(+495 files in other folders)
