# ShikshaSetu Python Project Configuration
# ==========================================
# Unified configuration for all Python tooling
#
# This file configures:
# - Ruff (linting & formatting)
# - Bandit (security)
# - Pytest (testing)
# - Coverage
# - MyPy (optional)

[project]
name = "shiksha-setu"
version = "4.0.0"
description = "AI Education Platform for India - Universal Learning Assistant"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "K Dhiraj", email = "kdhiraj@example.com"}
]
keywords = ["education", "ai", "llm", "translation", "india", "ncert"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/KDhiraj152/shiksha_setu"
Documentation = "https://github.com/KDhiraj152/shiksha_setu/docs"
Repository = "https://github.com/KDhiraj152/shiksha_setu"

# ============================================================================
# RUFF - Linting & Formatting
# ============================================================================
[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Line length (match black)
line-length = 88

# Exclude common non-code directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".eggs",
    "build",
    "dist",
    "migrations",
    "alembic/versions",
    "node_modules",
    ".pytest_cache",
    ".ruff_cache",
    "artifacts",
    "data",
    "storage",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "PT",     # pytest style
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore these rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (intentional for lazy loading)
    "F401",   # Unused imports (many are for re-export or conditional)
    "B008",   # Do not perform function call in argument defaults (FastAPI Depends)
    "B904",   # raise-without-from (sometimes intentional)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert usage allowed in tests
    "PT004",  # fixture doesn't return anything
    "B011",   # assert False
]
"__init__.py" = [
    "F401",   # unused imports (re-exports are intentional)
]
"conftest.py" = [
    "F401",   # unused imports (fixtures)
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["backend", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# ============================================================================
# BANDIT - Security Scanning
# ============================================================================
[tool.bandit]
# Exclude test files from security scanning
exclude_dirs = ["tests", "venv", ".venv", "artifacts"]

# Skip low severity issues
skips = ["B101", "B311"]  # assert, random for non-crypto

# Configure specific checks
[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py"]

# ============================================================================
# PYTEST - Testing
# ============================================================================
[tool.pytest.ini_options]
# Test discovery
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

# Markers
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (database, external services)",
    "e2e: End-to-end tests (full workflows)",
    "performance: Performance and load tests",
    "slow: Slow running tests",
    "gpu: Tests requiring GPU",
]

# Async configuration
asyncio_mode = "auto"

# Default options (override with command line)
addopts = [
    "--tb=short",
    "-q",
    "--strict-markers",
    "--maxfail=5",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================
[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
# Fail if coverage is below threshold
fail_under = 70

# Exclude from coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
]

# Show missing lines
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# MYPY - Type Checking (Optional)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

# Exclude directories
exclude = [
    "venv",
    ".venv",
    "tests",
    "alembic",
]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "mlx.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
